@@ -346,7 +346,10 @@ defList = { 'hod' : (
               False, 2, False, True),
              
              ('cmd-retry-interval', 'pos_float','interval to spread retries for getting commands',
-              False, 2, False, True)) 
+              False, 2, False, True),
+
+             ('mapred-system-dir-root', 'string', 'Root under which mapreduce system directory names are generated by HOD.',
+              False, '/mapredsystem', False, False))
               }   
 
 defOrder = [ 'hod', 'ringmaster', 'hodring', 'resource_manager', 
